# xenty-mvp

./: .dockerignore  .gitignore  Dockerfile  README.md  WARP.md  Xenty.py  __init__.py  app.py  pyproject.toml  requirements.docker.txt  requirements.txt  setup.py  sync.py  update_twitter_account.py
.github/workflows/: docker-publish.yml
.streamlit/: config.toml
constants/: config.py
models/engagement_clustering/: engagement_labels.json  features.json  metadata.json
models/engagement_clustering/tf_model/: fingerprint.pb  saved_model.pb
models/engagement_kmeans/: cluster_means.csv  kmeans.joblib  scaler.joblib
notebooks/: DL_sentiment_GOOD.ipynb  DL_sentiment_OF_HIGHT.ipynb  DL_sentiment_OF_LOW.ipynb  DL_sentiment_bertweet_bitcoin_tweets.ipynb  dl_sentiment_distilbert.ipynb  ml-engagement-kmeans.ipynb  xenty-ml.ipynb  xenty.ipynb
pages/: 01_📊_Visualization.py  03_🤖_ML_Prediction.py  1_🏠_Home.py  2_📊_Dataset.py  3_🔮_ML_Prediction.py  4_🧠_DL_Prediction.py  dataset_visualization.py  notebook_viewer.py  twitter_prediction.py
utils/: clusters.py  data_loader.py  distilbert_sentiment.py  env_loader.py  init.py  kaggle_auth.py  model_saver.py  notebook_display.py  notebook_utils.py  pipeline.py  save_notebook_model.py  twitter.py  ui_helpers.py
