[project]
name = "xenty"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10.14"
dependencies = [
    "emoji==0.6.0",
    "kagglehub>=0.3.12",
    "nbconvert>=7.16.6",
    "nbformat>=5.10.4",
    "pandas>=2.3.1",
    "pip>=25.1.1",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "streamlit>=1.47.0",
    "tensorflow>=2.19.0",
    "tensorflow-datasets>=4.9.9",
    "tensorflow-metal>=1.2.0",
    "tf-keras>=2.19.0",
    "torch>=2.7.1",
    "transformers>=4.53.2",
]
